fix: refactoring folder scopes and include User Repository
