# src/modules/cars/useCases/importCategory/ImportCategoryController.ts
@@ -1,20 +1,0 @@
-import { Request, Response } from "express";
-import { container } from "tsyringe";
-
-import { ImportCategoryUseCase } from "./ImportCategoryUseCase";
-
-class ImportCategoryController {
-  async handle(request: Request, response: Response): Promise<Response> {
-    const importCategoryUseCase = container.resolve(ImportCategoryUseCase);
-
-    const { file } = request;
-
-    await importCategoryUseCase.execute(file);
-
-    return response
-      .status(201)
-      .json({ message: "Category file imported sucessfuly." });
-  }
-}
-
-export { ImportCategoryController };
